# maxwell

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/catalysis/: categorical-catalysis-mechanism.tex  references.bib
docs/categorical-computing/: maxwell-categorical-computing.tex  references.bib
docs/categorical-memory/: molecular-dynamics-categorical-memory.tex
docs/consciousness/: biological-integrated-circuits-COMPLETE.tex  classical-mechanics-consiousness-emergence.tex  consiousness-categorical-completion.tex  gas-molecule-information-model.tex  geometry-of-consciousness.tex  human-reasoning-ai-architecture.tex  minimum-variance-circuit-completion.tex  olfactory-bmd-equivalence.tex  perception-flux-dynamics.tex  reality-electric-field-mechanics.tex  rigorous-thought.tex  structure-of-reality.tex  virtual-processor.tex
docs/processor/: categorical-processing-unit.tex
docs/resolution/: resolution-of-maxwell-demons.tex
docs/server-architecture/: architecture.md  buhera-server-theory.md  categorical-topology.tex  cooling-system.md  foundry-clock-integration.md  incoming.md  moon-landing-algorithm.tex  outgoing.md  server-diagrams.md  server.md  st-stellas-categories.tex  st-stellas.tex  thermodynamics.md  weather-system.md
examples/: basic_demo.rs
poincare/: README.md  run_all_experiments.py  run_demo.py  run_theory_experiments.py
poincare/results/: all_experiments_20251212_141022.json  (+9 more)
processor/: Cargo.toml  README.md
processor/benches/: processor_benchmarks.rs
processor/src/: categorical.rs  complementarity.rs  completion.rs  equivalence.rs  error.rs  kinetic.rs  lib.rs  main.rs  projection.rs  types.rs
validation/: README.md  generate_all_panels.py  generate_categorical_panels.py  generate_figures.py  pyproject.toml  run_categorical_computer.py  run_categorical_memory.py  run_complete_framework.py  run_molecular_semantics.py  run_precision_experiment.py  run_processor_and_gates.py  run_semantic_model.py  run_validation.py
validation/results/biological_gates/: biological_quantum_gates_20251210_220658.json
validation/results/categorical_memory/: demonstration_results_20251210_205734.json
validation/results/experiments/: exp1_20251207_054643.json  exp1_20251210_204753.json  exp1_20251210_210739.json  exp2_20251207_054643.json  exp2_20251210_204753.json  exp2_20251210_210739.json  exp3_20251207_054643.json  exp3_20251210_204753.json  exp3_20251210_210739.json  exp4_20251207_054643.json  exp4_20251210_204753.json  exp4_20251210_210739.json  exp5_20251207_054643.json  exp5_20251210_204753.json  exp5_20251210_210739.json  exp6_20251207_054643.json  exp6_20251210_204753.json  exp6_20251210_210739.json  exp7_20251207_054643.json  exp7_20251210_204753.json  exp7_20251210_210739.json  ic_exp1_20251208_135249.json  ic_exp2_20251210_210739.json  ic_exp3_20251208_135249.json  ic_exp3_20251208_142016.json  ic_exp4_20251208_135249.json  ic_exp4_20251210_210739.json  ic_exp5_20251208_135249.json  ic_exp5_20251208_142016.json  ic_exp5_20251210_210739.json  ic_exp6_20251208_135249.json  ic_exp6_20251208_142016.json  ic_exp6_20251210_210739.json  ic_exp7_20251208_135249.json  ic_exp7_20251208_142016.json  ic_exp7_20251210_210739.json  ic_exp8_20251208_135249.json  ic_exp8_20251208_142016.json  ic_exp8_20251210_210739.json  semi_exp2_20251208_135249.json  (+7 more)
validation/results/publication/: processor_validation_report.txt  summary_statistics.txt
validation/results/summary/: validation_summary_20251207_054643.json  validation_summary_20251210_204753.json  validation_summary_20251210_210739.json
validation/src/maxwell_validation/: __init__.py  alu.py  biological_quantum_gates.py  categorical.py  categorical_measurement.py  complementarity.py  dissolution.py  experiments.py  integrated_circuit.py  kinetic.py  maxwell_images.py  oscillator_processor_duality.py  precision_by_difference_experiment.py  processor.py  processor_benchmark.py  processor_images.py  publication_figures.py  quantum_gates.py  results_manager.py  semiconductor.py  semiconductor_experiments.py  types.py  unified_framework.py  utils.py  visualisations.py  visualize_all_systems.py  visualize_categorical_systems.py  visualize_dissolution.py  visualize_semiconductor.py  visualize_unified_framework.py
validation/src/maxwell_validation/categorical_computer/: __init__.py  categorical_runtime.py  demo.py  problem_translator.py  problem_types.py
validation/src/maxwell_validation/categorical_memory/: __init__.py  demo.py
validation/src/maxwell_validation/semantic_processor/: __init__.py  empty_dictionary.py  molecular_semantics.py  semantic_encoder.py  semantic_gravity.py  semantic_language_model.py
validation/tests/: test_dissolution.py
(+390 files in other folders)
