[package]
name = "maxwell-processor"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Complementarity-Aware Processor for Categorical Phase-Lock Dynamics"
license = "MIT"
repository = "https://github.com/sachikonye/maxwell"
keywords = ["categorical-dynamics", "phase-lock", "thermodynamics", "information-theory"]
categories = ["science", "simulation"]

[lib]
name = "maxwell_processor"
path = "src/lib.rs"

[[bin]]
name = "maxwell"
path = "src/main.rs"

[dependencies]
# Core numerics
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph structures for phase-lock networks
petgraph = "0.6"

# Parallel computation
rayon = "1.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Synchronization
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "processor_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

