[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxwell-validation"
version = "0.1.0"
description = "Validation and testing suite for the Maxwell Processor"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kundai Farai Sachikonye", email = "kundai.sachikonye@wzw.tum.de" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["categorical-dynamics", "thermodynamics", "maxwell-demon", "phase-lock"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.0",
    "pandas>=2.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/sachikonye/maxwell"
Documentation = "https://github.com/sachikonye/maxwell"
Repository = "https://github.com/sachikonye/maxwell"

[tool.hatch.build.targets.wheel]
packages = ["src/maxwell_validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]

